--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -1,16 +1,20 @@
 // Palette
+
 $primary: #87c887;
 $secondary: #e9ffe9;
 $contact-box-color: #76e4c5;
-$bg-secondary: #6ed4a5;
+$bg-secondary: #e7f0d8;
 
 // $primary: #87c0c8;
 // $secondary: #e9f8ff;
 // $contact-box-color: #d1d07d;
+// $bg-secondary: #f0ead8;
+// $bg-secondary: #d8eff0;
 
 // $primary: #c88787;
 // $secondary: #ffe9e9;
 // $contact-box-color: #be1212;
+// $bg-secondary: #f0d8d8;
 
 $accent: darken($primary, 10%);
 $dark-accent: darken($accent, 10%);
